fixed portfolio alignment

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -9,12 +9,7 @@
     margin: 20px 0px;
 }
 
-.list-list {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+
 .live-btn {
     color: #0dc2e9;
     font-weight: 450
@@ -24,4 +19,6 @@
     color: #74ec74;
     font-weight: 450
 }
+
+
 
